[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsniff"
version = "0.1.0"
description = "Python wrapper for dsniff network utilities"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "BSD" }
authors = [
    { name = "Modified dsniff" }
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["networking", "security", "packet-sniffer"]
urls = [{
    homepage = "",
}]

dependencies = []

entry-points.console_scripts = [
    "arpspoof=dsniff_py.cli:main",
    "dnsspoof=dsniff_py.cli:main",
    "dsniff=dsniff_py.cli:main",
    "filesnarf=dsniff_py.cli:main",
    "mailsnarf=dsniff_py.cli:main",
    "msgsnarf=dsniff_py.cli:main",
    "urlsnarf=dsniff_py.cli:main",
    "macof=dsniff_py.cli:main",
    "sshow=dsniff_py.cli:main",
    "sshmitm=dsniff_py.cli:main",
    "webmitm=dsniff_py.cli:main",
    "webspy=dsniff_py.cli:main",
    "tcpkill=dsniff_py.cli:main",
    "tcpnice=dsniff_py.cli:main",
    "dsniff-menu=dsniff_py.menu:main"
]

dynamic = ["license"]

[tool.setuptools.packages.find]
where = ["."]