[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsniff"
version = "0.1.0"
description = "This package provides a new Python wrapper for the dsniff network sniffer suite (originally by Dug Song)"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "BSD" }
authors = [
    { name = "Josh James", email = "josh@rocketnow.com" }
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["networking", "security", "packet-sniffer", "dsniff"]

dynamic = ["license"]